--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Primary Meta Tags -->
+<title>Todo APP , Next Level Experience [Easy To Use]</title>
+<meta name="title" content="Todo APP , Next Level Experience [Easy To Use]">
+<meta name="description" content="Todo  app will help you organize you task, you can easy access it with you pc or mobile, Now you can track you task Easily">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<!-- <meta property="og:url" content="https://metatags.io/"> -->
+<meta property="og:title" content="Todo APP , Next Level Experience [Easy To Use]">
+<meta property="og:description" content="Todo  app will help you organize you task, you can easy access it with you pc or mobile, Now you can track you task Easily">
+<meta property="og:image" content="https://media.discordapp.net/attachments/1020211662831239220/1099563991275147284/Screenshot_2023-04-23_103213.jpg?width=726&height=597">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<!-- <meta property="twitter:url" content="https://metatags.io/"> -->
+<meta property="twitter:title" content="Todo APP , Next Level Experience [Easy To Use]">
+<meta property="twitter:description" content="Todo  app will help you organize you task, you can easy access it with you pc or mobile, Now you can track you task Easily">
+<meta property="twitter:image" content="https://media.discordapp.net/attachments/1020211662831239220/1099563991275147284/Screenshot_2023-04-23_103213.jpg?width=726&height=597">
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    
   </head>
   <body>
     <div id="root"></div>
